<resources>
    <string name="app_name">Namada SE App</string>
    <string name="title_blocks">Blocks</string>
    <string name="title_block">Block</string>
    <string name="title_validator">Validators</string>
    <string name="title_proposal">Proposals</string>
    <string name="title_notifications">Notifications</string>
    <string name="transactions">Transactions</string>
    <string name="transaction">transaction</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_validator_hint">search validators by moniker, address</string>
    <string name="search_block_hint">Search by block height</string>
    <string name="search_tx_hint">Search transaction by tx hash</string>
    <string-array name="proposal_status">
        <item>All</item>
        <item>Rejected</item>
        <item>Passed</item>
        <item>Pending</item>
    </string-array>
    <string-array name="proposal_kind">
        <item>All</item>
        <item>PgfSteward</item>
        <item>Default</item>
        <item>PgfFunding</item>
    </string-array>
</resources>