<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.namada.app.ui.home.HomeFragment"
        android:label="@string/title_blocks"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_block_detail"
            app:destination="@id/navigation_block_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_validator"
        android:name="com.namada.app.ui.validator.ValidatorFragment"
        android:label="@string/title_validator"
        tools:layout="@layout/fragment_validator" />

    <fragment
        android:id="@+id/navigation_proposal"
        android:name="com.namada.app.ui.proposal.ProposalFragment"
        android:label="@string/title_proposal"
        tools:layout="@layout/fragment_proposal" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.namada.app.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_block_detail"
        android:name="com.namada.app.ui.block.BlockDetailFragment"
        android:label="@string/title_block"
        tools:layout="@layout/fragment_block_detail" >
        <argument
            android:name="block"
            app:argType="com.namada.app.domain.Block" />
    </fragment>
</navigation>